# IsaacLangUnlocker

./: CMakeLists.txt  Injector.cpp  InstallGuide.txt  OpenSourceLicense.txt  ReadMe.txt  Source.def  config.h  config.ini  defines.h  dllmain.cpp  lang.h  main.lua  patchers.cpp  patchers.h  中文补丁使用说明.txt
.github/workflows/: msbuild.yml
bootstrap/: Source.def  main.cpp
exe_patcher/: main.cpp  make_resource.py
injector/: Injector.h  config.h  dllmain.cpp  patchers.cpp
loader/: main.cpp
